value-objects: simplify discussion, focus on links to other sources